# MockingProblems

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/sharedresource/: main.rs  serialport.rs
src/simple/: dependency.rs  main.rs
src/threadsafe/: dependency.rs  main.rs  middleman.rs
